Prevent margins from collapsing on the main header

--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,12 @@ a {
   Base Layout Styles
 ==================================== */
 
+/* ---- Navigation ---- */
+
+.name {
+  margin: 0;
+}
+
 /* ---- Layout Containers ---- */
 
 .wrapper {
@@ -39,6 +45,7 @@ a {
 
 .main-header {
 	background: #3acec2;
+  padding: 1em 0;
 }
 
 .main-footer {
